# Rust-Rest-Boilerplate

./: .env  .env_example  .gitignore  Cargo.toml  README.md  env.example
src/: main.rs
src/inc/: auth.rs  db.rs  middleware.rs  mod.rs
src/models/: structs.rs
src/routes/: hello.rs  user.rs
