[package]
name = "RustRest"
version = "0.1.0"
authors = ["Andrés Alonzo <aalonzolu@gmail.com>"]
edition = "2018"


[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
serde = {version="1.0", features = ["derive"] }
serde_json = "1.0"
frank_jwt= "*"
mongodb = "0.3.11"
dotenv = "0.14.1"
jwt = "0.4.0"
rust-crypto = "0.2"
rustc-serialize = "0.3"
bcrypt = "0.4"